blackroad-sf/force-app/main/default/objects/Case/fields/AgentId__c.field-meta.xml
<CustomField>
    <fullName>AgentId__c</fullName>
    <label>Assigned Agent</label>
    <type>Text</type>
    <length>80</length>
</CustomField>