blackroad-sf/force-app/main/default/objects/Case/fields/BaseRepo__c.field-meta.xml
<CustomField>
    <fullName>BaseRepo__c</fullName>
    <label>Base Repo</label>
    <type>Text</type>
    <length>255</length>
</CustomField>