blackroad-sf/force-app/main/default/objects/Case/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Text</type>
    <length>80</length>
</CustomField>