blackroad-sf/force-app/main/default/objects/Case/fields/CIStatus__c.field-meta.xml
<CustomField>
    <fullName>CIStatus__c</fullName>
    <label>CI Status</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>pending</fullName><default>true</default><label>Pending</label></value><value><fullName>running</fullName><default>false</default><label>Running</label></value><value><fullName>success</fullName><default>false</default><label>Success</label></value><value><fullName>failure</fullName><default>false</default><label>Failure</label></value></valueSetDefinition></valueSet>
</CustomField>