blackroad-sf/force-app/main/default/objects/Case/fields/DiffSummary__c.field-meta.xml
<CustomField>
    <fullName>DiffSummary__c</fullName>
    <label>Diff Summary</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>