blackroad-sf/force-app/main/default/objects/Case/fields/IsAgentTraining__c.field-meta.xml
<CustomField>
    <fullName>IsAgentTraining__c</fullName>
    <label>Is Agent Training PR</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>