blackroad-sf/force-app/main/default/objects/Case/fields/MergeReady__c.field-meta.xml
<CustomField>
    <fullName>MergeReady__c</fullName>
    <label>Merge Ready</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>