blackroad-sf/force-app/main/default/objects/Case/fields/ModelCheckpoint__c.field-meta.xml
<CustomField>
    <fullName>ModelCheckpoint__c</fullName>
    <label>Model Checkpoint</label>
    <type>Text</type>
    <length>255</length>
</CustomField>