blackroad-sf/force-app/main/default/objects/Case/fields/PRNumber__c.field-meta.xml
<CustomField>
    <fullName>PRNumber__c</fullName>
    <label>PR Number</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>