blackroad-sf/force-app/main/default/objects/Case/fields/PullRequestUrl__c.field-meta.xml
<CustomField>
    <fullName>PullRequestUrl__c</fullName>
    <label>Pull Request URL</label>
    <type>Url</type>
</CustomField>