blackroad-sf/force-app/main/default/objects/Case/fields/ReviewStatus__c.field-meta.xml
<CustomField>
    <fullName>ReviewStatus__c</fullName>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>open</fullName><default>true</default><label>Open</label></value><value><fullName>changes_requested</fullName><default>false</default><label>Changes Requested</label></value><value><fullName>approved</fullName><default>false</default><label>Approved</label></value><value><fullName>merged</fullName><default>false</default><label>Merged</label></value><value><fullName>closed</fullName><default>false</default><label>Closed</label></value></valueSetDefinition></valueSet>
</CustomField>