blackroad-sf/force-app/main/default/objects/Case/fields/TestCoverage__c.field-meta.xml
<CustomField>
    <fullName>TestCoverage__c</fullName>
    <label>Test Coverage %</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>