blackroad-sf/force-app/main/default/objects/Case/fields/TrainingDataPath__c.field-meta.xml
<CustomField>
    <fullName>TrainingDataPath__c</fullName>
    <label>Training Data Path</label>
    <type>Text</type>
    <length>255</length>
</CustomField>