blackroad-sf/force-app/main/default/objects/Case/fields/TrainingProject__c.field-meta.xml
<CustomField>
    <fullName>TrainingProject__c</fullName>
    <label>Training Project</label>
    <type>Text</type>
    <length>255</length>
</CustomField>